modify width of c2a and fix issue with subtitle pressing on borders on small screens

--- a/components/hero/Hero.module.css
+++ b/components/hero/Hero.module.css
@@ -31,7 +31,7 @@
     line-height: 28px;
     letter-spacing: .2px;
     margin-bottom: 2.45rem;
-    margin-inline: -3rem;
+    margin-inline: -2.5rem;
     text-align: center;
 
 }
@@ -72,6 +72,8 @@
 
 .hero__btn {
     margin-bottom: 2.45rem;
+    text-align: center;
+    width: 100%;
 }
 
 .hero__right img {
@@ -169,6 +171,11 @@
     .hero__subtitle {
         text-align: left;
         margin-inline: initial;
+    }
+
+    .hero__btn {
+        width: 50%;
+        min-width: fit-content;
     }
 
     /* .hero__right img {
